fix: the x in the offline badge is sometimes low contrast, especially in dark themes
Fixes #6784

--- a/plugins/plugin-core-themes/web/scss/atelier-seaside.scss
+++ b/plugins/plugin-core-themes/web/scss/atelier-seaside.scss
@@ -41,4 +41,7 @@ body[kui-theme='Atelier'] {
   --color-latency-3: #f6e8c3;
   --color-latency-4: #d8b365;
   --color-latency-5: #8c510a;
+
+  --color-error-cell-bg: var(--color-base0E);
+  --color-error-cell-text: var(--color-base07);
 }
