--- a/plugins/plugin-core-themes/web/scss/paraiso.scss
+++ b/plugins/plugin-core-themes/web/scss/paraiso.scss
@@ -37,4 +37,7 @@ body[kui-theme='Paraiso'] {
   --color-latency-3: #fee0b6;
   --color-latency-4: #f1a340;
   --color-latency-5: #b35806;
+
+  --color-error-cell-bg: var(--color-base0E);
+  --color-error-cell-text: var(--color-base00);
 }
