--- a/plugins/plugin-patternfly4-themes/web/scss/patternfly4-light.scss
+++ b/plugins/plugin-patternfly4-themes/web/scss/patternfly4-light.scss
@@ -60,6 +60,9 @@ body.kui--patternfly4[kui-theme='PatternFly4 Light'][kui-theme-style] {
   --color-yellow-sidecar: var(--pf-global--palette--gold-200);
   --color-green-sidecar: var(--pf-global--palette--green-200);
 
+  --color-error-cell-bg: var(--color-base0E);
+  --color-error-cell-text: var(--color-base00);
+
   @include patternfly-sidecar;
   @include charts-light;
 }
